--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 #overlay{
-    background-color: rgba(9, 7, 36, 1);
-    color: white;
+    background-color:rgba(9, 7, 36, 1);
+    color:white;
     margin-top: 7.7%;
     margin-bottom: 0;
-    font-size: 18px;
-    border-left: 200px solid whitesmoke;
-    border-right: 200px solid whitesmoke;
+    font-size: 24px;
+    border-left: 200px solid white ;
+    border-right: 200px solid white;
     justify-content: space-around;
     padding-left: 150px;
     padding-right: 100px;
@@ -104,4 +104,7 @@ th{
 }
 #management{
     color: hotpink;
+}
+.tradi{
+    border-radius: 30px;
 }
