--- a/about.css
+++ b/about.css
@@ -4,8 +4,8 @@
     margin-top: 7.7%;
     margin-bottom: 0;
     font-size: 24px;
-    border-left: 200px solid whitesmoke;
-    border-right: 200px solid whitesmoke;
+    Margin-left: 15% ;
+    margin-right: 15% ;
     justify-content: space-around;
     padding-left: 150px;
     padding-right: 100px;
