--- a/awards.css
+++ b/awards.css
@@ -1,21 +1,28 @@
-#overlay{
-    background-color: rgba(9, 7, 36, 1);
+*{
+    width: 98%;
+    overflow-x: hidden;
+    
+}
+.container{
+    overflow-x: hidden;
+    width: 50%;
     color: white;
-    margin-top: 7.7%;
-    margin-bottom: 0;
-    font-size: 24px;
-    margin-left: 15%;
-    margin-right: 15%;
-    justify-content: space-around;
-    padding-left: 150px;
-    padding-right: 150px;
-    margin-bottom: 0;
-    overflow: none;
+    padding-left:30px;
+}
+body{
+    background-color: rgba(9, 7, 36, 1);
+    margin-top: 20%;
+    overflow-x: none;
+    padding-left: 50px;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 nav{
     margin-right:0;
   background-color: black;
   padding:45px;
+  padding-bottom: 30px;
   position: fixed;
   top:0;
   right:0;
@@ -24,15 +31,20 @@ nav{
   background-image:url("https://lh3.googleusercontent.com/isHqUOsF4W8mb9r8avCKK1dt0Ue8OvpdeDJJiONRg0TCChooPJtrqaPdRwuYgglJZntsTQ=s110");
   background-size:contain;
   background-repeat:no-repeat;
+  overflow: visible;
+  display: inline;
 }
 nav>ul{
-    text-align: right;
+    text-align: center;
     left: 0;
     right: 0;
     top: 0;
+    overflow: visible;
 }
 nav>ul>li{
-    display: inline-block;
+    display: inline;
+    overflow: visible;
+    padding: 30px;
 }
 nav>ul>li>a{
     text-transform:uppercase;
@@ -45,46 +57,117 @@ nav>ul>li>a:hover{
     background-color: gold;
     box-shadow: 2px 2px 5px gold;
 }
+.icon-bar {
+    position: fixed;
+    width: 5%;
+    top: 7%;
+    left: 90%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    overflow: hidden;
+}
+.icon-bar a {
+    display: inline;
+    text-align: center;
+    padding: 16px;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 20px;
+  }
+  .icon-bar a:hover{
+    color: deeppink;
+}
+.facebook {
+    color: white;
+  }
+  
+  .twitter {
+    color: white;
+  }
+  
+  .google {
+    color: white;
+  }
+  
+  .instagram {
+    color: white;
+  }
+  
+  .youtube {
+    color: white;
+  }
 .contacts{
     background-color: black;
     color: white;
     position: relative;
 }
-.logo{
-    float: right;
-    position: relative;
-    bottom: 180px;
-    right: 10px;
+
+.footer{
+    width: 110%;
+    margin-left: -3%;
+    right: 0;
+    overflow: hidden;
+    background-color: black;
+}
+footer{
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: black;
+    color: bisque;
+}
+.languages{
+    overflow: hidden;
+    padding: 30px;
 }
 .languages>ul>li{
-    display: inline-block;
+    display: inline;
     padding: 35px;
     color: rgb(202, 72, 50);
+    overflow: hidden;
+    padding: 30px;
+}
+.languages>ul{
+    display: inline;
+    overflow: hidden;
+    padding: 30px;
 }
 .languages>ul>li:hover{
     color : goldenrod;
     background-color: white;
 }
-tr {
-    justify-content: space-between;
-    padding: 10px;
+.table{
+    border: 2px solid white;
+    padding: 5px;
+    overflow: hidden;
+    width: 20%;
+    margin-left: 4%;
+    background-color: black;
 }
-td{
+.table tr {
     justify-content: space-between;
-    padding: 10px;
+    padding: 5px;
+    background-color: black;
+    color: white;
+}
+.table tr td{
+    justify-content: space-between;
+    padding: 5px;
+    background-color: black;
+    color: white;
+}
+.table tr th:first-child{
+    text-align: left;
 }
 th{
     margin-left: 0;
-    padding-right: 0;
-}
-span{
     text-decoration: underline;
+    padding-right: 0;
+    padding: 5px;
 }
 .film{
-    position: relative;
-    left: 600px;
-    bottom: 150px;
-    font-size: 50px;
+    font-size: 40px;
     color: gold;
     font-family: 'Yeon Sung', cursive;
 }
@@ -99,6 +182,7 @@ span{
 #category{
     border-collapse: collapse;
     border: 2px solid black;
+    width: 500px;
 }
 tr{
     border: 2px solid black;
@@ -109,7 +193,11 @@ tr{
 th{
     border: 2px solid black;
     padding: 20px;
-    
+    height:50px;
+    width: 50px;   
+}
+span{
+    width: 50px;
 }
 #indian{
     background-color: indianred
@@ -133,4 +221,7 @@ th{
 }
 h2 , h1{
     color: rgb(218, 201, 107);
+}
+.winners{
+    width: 60%;
 }
