--- a/events.css
+++ b/events.css
@@ -202,3 +202,16 @@ p{
     left: 250px;
     padding-bottom: 50px;
 }
+@media screen and (max-width:1024px){
+    body{
+        width:90%;
+        padding-left: 20px;
+        margin-top: 33%;
+    } 
+    .container{
+        width: 90%;
+    }
+    h1{
+        left: 10%;
+    }
+}
