--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body{
     top: 0;
     left: 0;
     right: 0;
+    overflow-x: hidden;
 }
 nav{
     margin-right:0;
@@ -203,3 +204,20 @@ iframe{
     display: flex;
     flex-direction: row;
 }
+@media screen and (max-width:1024px){
+      body{
+          width:90%;
+          padding-left: 20px;
+          margin-top: 29%;
+      } 
+       #gallery{
+           display: flex;
+           flex-direction: column;
+       }
+       nav{
+           width:80%;
+       }
+}
+
+
+
